# ad-data-pipeline

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codex.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
dags/: __init__.py
dags/analytics/: __init__.py  advertiser_report_dag.py  ranking_data_dag.py  user_segmentation_dag.py
dags/s3_management/: __init__.py  s3_compaction_dag.py  s3_hot_cold_tiering_dag.py  s3_partitioning_dag.py
docs/: dag_guide.md
plugins/: __init__.py
plugins/hooks/: __init__.py  custom_s3_hook.py
plugins/operators/: __init__.py  data_quality_operator.py  s3_partition_operator.py  spark_submit_operator.py
plugins/sensors/: __init__.py  data_freshness_sensor.py  s3_partition_sensor.py
scripts/: run-tests.sh  validate-dags.sh
src/ad_data_pipeline/: __init__.py
src/ad_data_pipeline/config/: __init__.py  settings.py
src/ad_data_pipeline/models/: __init__.py  event.py  report.py  segment.py
src/ad_data_pipeline/transformations/: __init__.py  compactor.py  partitioner.py  ranking_features.py  report_builder.py  segmentation.py  tiering.py
src/ad_data_pipeline/utils/: __init__.py  alerts.py  data_quality.py  metrics.py  quick_export.py  s3.py  spark.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analytics_dags.py  test_s3_management_dags.py
tests/unit/: __init__.py  test_compactor.py  test_partitioner.py  test_ranking_features.py  test_report_builder.py  test_segmentation.py
