[metadata]
name = ad-data-pipeline
version = 0.1.0
description = Facebook Ad System Data Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = Priya Sharma
author_email = priyasharma@fb.com
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .venv,
    build,
    dist,
    *.egg-info,
    .mypy_cache
per-file-ignores =
    __init__.py:F401
